# RustyPilot

./: .gitignore  AI_SESSION_MANAGER_QUICKSTART.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
.github/workflows/: rust.yml
doc/: ai_session_manager.md  architecture_flow.md  confirmation_flow.md  execution_gate.md  rustyterm_design.md  shell_execute_visible.md  ui_security_verdicts.md
doc/todo/: cleanup-legacy-parser.md  mouse-support.md
examples/: ai_session_demo.rs  benchmark_output.rs  command_context_demo.rs  context_demo.rs  hello_world.rs  openai.rs  tui_chat_assistant.rs  tui_shell.rs
examples/tui_shell/: debug_panel.rs  main.rs  shell.rs  terminal.rs
src/: app.rs  lib.rs  main.rs
src/ai/: client.rs  mod.rs  parser.rs  persistence.rs  prompt.rs  session.rs
src/context/: command_log.rs  cwd.rs  env.rs  history.rs  mod.rs  tests.rs
src/event/: assistant.rs  mod.rs  mouse.rs  terminal.rs
src/security/: allowlist.rs  analyzer.rs  executor.rs  mod.rs
src/shell/: mod.rs  subprocess.rs
src/ui/: ai_panel.rs  app.rs  assistant.rs  event_loop.rs  layout.rs  mod.rs  shell_panel.rs  terminal.rs  visual.rs
src/utils/: context.rs  logger.rs  mod.rs  shell2.rs
