[package]
name = "rusty-term"
version = "0.1.0"
edition = "2024"

[lib]
name = "rusty_term"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-openai = "0.30.1"
crossterm = "0.28"
portable-pty = "0"
ratatui = "0.29"
vt100 = "0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0"
unicode-width = "0"
alacritty_terminal = "0.25.1"
textwrap = "0.16"
